current/overlays/dev-azure/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
    - host: api.vatusa.dev
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: login.vatusa.dev
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: auth.vatusa.dev
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.vatusa.dev
        - login.vatusa.dev
        - auth.vatusa.dev
      secretName: vatusa-dev-tls
